--- a/about.html
+++ b/about.html
@@ -48,10 +48,30 @@
           <img alt="team" class="flex-shrink-0 rounded-lg w-48 h-48 object-cover object-center sm:mb-0 mb-4" src="/data/at.jpeg">
           <div class="flex-grow sm:pl-8">
             <h2 class="title-font font-medium text-lg text-gray-900">Akshansh Tyagi</h2>
-            <h3 class="text-gray-500 mb-3">Co-Founder</h3>
-            <p class="mb-4">test123!</p>
+            <h3 class="text-gray-500 mb-3">Founder</h3>
+            <p class="mb-4">I can guide you with the process of applications at Canadian Universities!</p>
             <span class="inline-flex">
                 <a href= "https://www.linkedin.com/in/akshanshtyagi"  class="ml-3 text-gray-500">
+              <svg fill="currentColor" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="0" class="w-5 h-5" viewBox="0 0 24 24">
+                <path stroke="none" d="M16 8a6 6 0 016 6v7h-4v-7a2 2 0 00-2-2 2 2 0 00-2 2v7h-4v-7a6 6 0 016-6zM2 9h4v12H2z"></path>
+                <circle cx="4" cy="4" r="2" stroke="none"></circle>
+              </svg>
+                </a> 
+            </span>
+          </div>
+        </div>
+      </div>
+
+    <div class="flex flex-wrap -m-4">
+      <div class="p-4 lg:w-1/2">
+        <div class="h-full flex sm:flex-row flex-col items-center sm:justify-start justify-center text-center sm:text-left">
+          <img alt="team" class="flex-shrink-0 rounded-lg w-48 h-48 object-cover object-center sm:mb-0 mb-4" src="/data/kannav.png">
+          <div class="flex-grow sm:pl-8">
+            <h2 class="title-font font-medium text-lg text-gray-900">Kannav Dhawan</h2>
+            <h3 class="text-gray-500 mb-3">Co-Founder</h3>
+            <p class="mb-4">Hey! I am a Data scientist and Software developer. I can land you to part time and online jobs when you land here.</p>
+            <span class="inline-flex">
+                <a href= "https://www.linkedin.com/in/kannavdhawan"  class="ml-3 text-gray-500">
               <svg fill="currentColor" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="0" class="w-5 h-5" viewBox="0 0 24 24">
                 <path stroke="none" d="M16 8a6 6 0 016 6v7h-4v-7a2 2 0 00-2-2 2 2 0 00-2 2v7h-4v-7a6 6 0 016-6zM2 9h4v12H2z"></path>
                 <circle cx="4" cy="4" r="2" stroke="none"></circle>
