--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-indigo-500 rounded-full" viewBox="0 0 24 24">
               <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
             </svg>
-            <span class="ml-3 text-xl">UniBoard</span>
+            <span class="ml-3 text-xl">Bridge2Uni</span>
           </a>
           <div class="lg:w-2/5 inline-flex lg:justify-end ml-5 lg:ml-0">
         <a href="/contact.html">
@@ -36,14 +36,14 @@
       <hr>      <hr>
       <section class="text-gray-700 body-font relative">
         <div class="absolute inset-0 bg-gray-300">
-          <iframe width="100%" height="100%" frameborder="0" marginheight="0" marginwidth="0" title="map" scrolling="no" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d92638.69463286198!2d-80.6167592420416!3d43.48232168418701!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882bf1565ffe672b%3A0x5037b28c7231d90!2sWaterloo%2C%20ON!5e0!3m2!1sen!2sca!4v1606687848461!5m2!1sen!2sca" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+          <iframe width="100%" height="100%" frameborder="0" marginheight="0" marginwidth="0" title="map" scrolling="no" src=https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d448181.1637429888!2d76.81306784695768!3d28.647279935250587!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390cfd5b347eb62d%3A0x37205b715389640!2sDelhi%2C%20India!5e0!3m2!1sen!2sca!4v1609182388367!5m2!1sen!2sca" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
         </div>
         <div class="container px-5 py-24 mx-auto flex">
           <div class="lg:w-1/3 md:w-1/2 bg-white rounded-lg p-8 flex flex-col md:ml-auto w-full mt-10 md:mt-0 relative z-10">
             <h2 class="text-gray-900 text-lg mb-1 font-medium title-font">Reach out to us for starting the process for free!</h2>
             <p class="leading-relaxed mb-5 text-gray-600">Please fill out the form for more details!</p>
             <div class="relative mb-4">
-                <a href ="https://us7.list-manage.com/contact-form?u=2d4cc116662ec5808471877e1&form_id=d3ffd2b8c70c7478acc78de0f129b3d3">
+                <a href ="www.bridge2uni.in">
               <!-- <label for="email" class="leading-7 text-sm text-gray-600">Email</label>
               <input type="email" id="email" name="email" class="w-full bg-white rounded border border-gray-300 focus:border-indigo-500 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"> -->
             <!-- </div>
@@ -51,7 +51,7 @@
               <label for="message" class="leading-7 text-sm text-gray-600">Message</label>
               <textarea id="message" name="message" class="w-full bg-white rounded border border-gray-300 focus:border-indigo-500 h-32 text-base outline-none text-gray-700 py-1 px-3 resize-none leading-6 transition-colors duration-200 ease-in-out"></textarea>
             </div> -->
-            <button class="text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">Fill Form</button>
+            <button class="text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">Call us@ +91 8826776436</button>
             </a>
             <p class="text-xs text-gray-500 mt-3">Rest assured.</p>
           </div>
@@ -64,13 +64,13 @@
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-indigo-500 rounded-full" viewBox="0 0 24 24">
               <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
             </svg>
-            <span class="ml-3 text-xl">UniBoard</span>
+            <span class="ml-3 text-xl">Bridge2Uni</span>
           </a>
-          <p class="text-sm text-gray-500 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-4">© 2020 UniBoard —
-            <a href="https://facebook.com/UniBoard" class="text-gray-600 ml-1" rel="noopener noreferrer" target="_blank">@UniBoard</a>
+          <p class="text-sm text-gray-500 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-4">© 2020 Bridge2Uni —
+            <a href="https://facebook.com/Bridge2Uni" class="text-gray-600 ml-1" rel="noopener noreferrer" target="_blank">@Bridge2Uni</a>
           </p>
           <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start">
-            <a href="https://facebook.com/UniBoard"class="text-gray-500">
+            <a href="https://facebook.com/Bridge2Uni"class="text-gray-500">
               <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
                 <path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"></path>
               </svg>
