--- a/index.html
+++ b/index.html
@@ -106,14 +106,14 @@
       <hr>
       <section class="text-gray-700 body-font relative">
         <div class="absolute inset-0 bg-gray-300">
-          <iframe width="100%" height="100%" frameborder="0" marginheight="0" marginwidth="0" title="map" scrolling="no" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d92638.69463286198!2d-80.6167592420416!3d43.48232168418701!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882bf1565ffe672b%3A0x5037b28c7231d90!2sWaterloo%2C%20ON!5e0!3m2!1sen!2sca!4v1606687848461!5m2!1sen!2sca" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+          <iframe width="100%" height="100%" frameborder="0" marginheight="0" marginwidth="0" title="map" scrolling="no" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d448181.1637429888!2d76.81306784695768!3d28.647279935250587!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390cfd5b347eb62d%3A0x37205b715389640!2sDelhi%2C%20India!5e0!3m2!1sen!2sca!4v1609182388367!5m2!1sen!2sca" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
         </div>
         <div class="container px-5 py-24 mx-auto flex">
           <div class="lg:w-1/3 md:w-1/2 bg-white rounded-lg p-8 flex flex-col md:ml-auto w-full mt-10 md:mt-0 relative z-10">
             <h2 class="text-gray-900 text-lg mb-1 font-medium title-font">Reach out to us for starting the process for free!</h2>
             <p class="leading-relaxed mb-5 text-gray-600">Please fill out the form for more details!</p>
             <div class="relative mb-4">
-                <a href ="https://us7.list-manage.com/contact-form?u=2d4cc116662ec5808471877e1&form_id=d3ffd2b8c70c7478acc78de0f129b3d3">
+                <a href ="www.bridge2uni.in">
               <!-- <label for="email" class="leading-7 text-sm text-gray-600">Email</label>
               <input type="email" id="email" name="email" class="w-full bg-white rounded border border-gray-300 focus:border-indigo-500 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"> -->
             <!-- </div>
