--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
         <div class="container px-5 py-24 mx-auto flex">
           <div class="lg:w-1/3 md:w-1/2 bg-white rounded-lg p-8 flex flex-col md:ml-auto w-full mt-10 md:mt-0 relative z-10">
             <h2 class="text-gray-900 text-lg mb-1 font-medium title-font">Reach out to us for starting the process for free!</h2>
-            <p class="leading-relaxed mb-5 text-gray-600">Please fill out the form for more details!</p>
+            <p class="leading-relaxed mb-5 text-gray-600">Please call us for more details!</p>
             <div class="relative mb-4">
                 <a href ="www.bridge2uni.in">
               <!-- <label for="email" class="leading-7 text-sm text-gray-600">Email</label>
