--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <div class="container px-5 py-24 mx-auto flex">
           <div class="lg:w-1/3 md:w-1/2 bg-white rounded-lg p-8 flex flex-col md:ml-auto w-full mt-10 md:mt-0 relative z-10">
             <h2 class="text-gray-900 text-lg mb-1 font-medium title-font">Reach out to us for starting the process for free!</h2>
-            <p class="leading-relaxed mb-5 text-gray-600">Please fill out the form for more details!</p>
+            <p class="leading-relaxed mb-5 text-gray-600">Please call us for more details!</p>
             <div class="relative mb-4">
                 <a href ="www.bridge2uni.in">
               <!-- <label for="email" class="leading-7 text-sm text-gray-600">Email</label>
@@ -121,7 +121,7 @@
               <label for="message" class="leading-7 text-sm text-gray-600">Message</label>
               <textarea id="message" name="message" class="w-full bg-white rounded border border-gray-300 focus:border-indigo-500 h-32 text-base outline-none text-gray-700 py-1 px-3 resize-none leading-6 transition-colors duration-200 ease-in-out"></textarea>
             </div> -->
-            <button class="text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">Fill Form</button>
+            <button class="text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">+91 8826776436</button>
             </a>
             <p class="text-xs text-gray-500 mt-3">Rest assured.</p>
           </div>
