--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
           <div class="flex-grow sm:pl-8">
             <h2 class="title-font font-medium text-lg text-gray-900">Akshansh Tyagi</h2>
             <h3 class="text-gray-500 mb-3">Founder</h3>
-            <p class="mb-4">I can guide you with the process of applications at Canadian Universities!</p>
+            <p class="mb-4">Hey! I'm a Software Engineer and an Entrepreneur. I can guide you with the process of applications at Canadian Universities!</p>
             <span class="inline-flex">
                 <a href= "https://www.linkedin.com/in/akshanshtyagi"  class="ml-3 text-gray-500">
               <svg fill="currentColor" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="0" class="w-5 h-5" viewBox="0 0 24 24">
@@ -69,7 +69,7 @@
           <div class="flex-grow sm:pl-8">
             <h2 class="title-font font-medium text-lg text-gray-900">Kannav Dhawan</h2>
             <h3 class="text-gray-500 mb-3">Co-Founder</h3>
-            <p class="mb-4">Hey! I am a Data scientist and Software developer. I can land you to part time and online jobs when you land here.</p>
+            <p class="mb-4">Hey! I am a Data scientist and Software developer. I can land you to part time and online jobs when you land abroad.</p>
             <span class="inline-flex">
                 <a href= "https://www.linkedin.com/in/kannavdhawan"  class="ml-3 text-gray-500">
               <svg fill="currentColor" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="0" class="w-5 h-5" viewBox="0 0 24 24">
