--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
     <div class="container px-5 py-24 mx-auto">
       <div class="flex flex-col text-center w-full mb-20">
         <h1 class="text-2xl font-medium title-font mb-4 text-gray-900 tracking-widest">OUR TEAM</h1>
-        <p class="lg:w-2/3 mx-auto leading-relaxed text-base">!</p>
+        <p class="lg:w-2/3 mx-auto leading-relaxed text-base"></p>
       </div>
       
     <div class="flex flex-wrap -m-4">
@@ -49,7 +49,7 @@
           <div class="flex-grow sm:pl-8">
             <h2 class="title-font font-medium text-lg text-gray-900">Akshansh Tyagi</h2>
             <h3 class="text-gray-500 mb-3">Founder</h3>
-            <p class="mb-4">Hey! I'm a Software Engineer and an Entrepreneur. I can guide you with the process of applications at Canadian Universities!</p>
+            <p class="mb-4">Hey! I'm a Software Engineer and an Entrepreneur. I can guide you with the process of applications at Universities Abroad!</p>
             <span class="inline-flex">
                 <a href= "https://www.linkedin.com/in/akshanshtyagi"  class="ml-3 text-gray-500">
               <svg fill="currentColor" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="0" class="w-5 h-5" viewBox="0 0 24 24">
